--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,5 +33,11 @@ indicatif = "~0.17"
 # git dependency
 rand = { git = "https://github.com/rust-random/rand", rev = "8792268dfe57e49bb4518190bf4fe66176759a44", version = "0.8.4" }
 
+[dev-dependencies]
+textwrap = "0.15.2"
+
+[build-dependencies]
+adler = "0.2.3"
+
 [patch.crates-io]
 heck = { path = "./heck" }
