Replace regular PyPI dependency with URL
This branch allows to cover a scenario when a pip dependency has some
rust dependencies. Before merging https://github.com/hermetoproject/hermeto/pull/991
pip dependencies that were declared as URL or git URL were casusing
prefetching failures because of nested directory structure that has been
used for historical reasons.

Replace cryptography package with the same version as zip file from
github archive to ensure the cargo+pip functionality works as expected
for all kinds of pip dependencies.

Signed-off-by: Michal Šoltis <msoltis@redhat.com>

--- a/requirements.in
+++ b/requirements.in
@@ -1,1 +1,2 @@
-cryptography==44.0.2
+cryptography @ https://github.com/pyca/cryptography/archive/refs/tags/44.0.2.zip \
+	--hash=sha256:94ce632f0cb9162cdc282c35b2c9f203e805106673a05a3d193332e4c2f9d905
